--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Inter", sans-serif;
+  font-size: 95% !important;
 }
 
 a {
@@ -59,6 +60,6 @@ ul.subCategoryUl {
   transform-origin: top;
   transition: all 0.3s ease-in-out;
 }
-.homeCategorySub>li:hover>ul{
+.homeCategorySub > li:hover > ul {
   transform: scaleY(1);
 }
