--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Inter", sans-serif;
-  font-size: 95% !important;
+  /* font-size: 95% !important; */
 }
 
 a {
